# test-transplantation

./: .cursorignore  .gitignore  README.md  fastapi_tests_analysis_output.txt  flask_tests_analysis_output.txt  install_deps_to_repos.sh  logs.txt  output  output.stacktrace  output.traces  parallel_analyze_tests.sh  parallel_clone_repos.sh  parallel_collect_tests.sh  parallel_run_tests.sh  parallel_setup_repo_envs.sh  pipeline.sh  prepare-env.sh  pyproject.toml  run_pipeline_tmux.sh
__internal__/: .gitignore  collected_methods_fastapi.json  collected_methods_flask.json
__internal__/4o_collected_tests_explanation/: collected_tests_explanation__flask.json
__internal__/_logs/: aiohttp_tests_analysis_output.txt  connexion_tests_analysis_output.txt  django_tests_analysis_output.txt  fastapi_tests_analysis_output.txt  flask_tests_analysis_output.txt  gunicorn_tests_analysis_output.txt  pyramid_tests_analysis_output.txt  sanic_tests_analysis_output.txt  starlette_tests_analysis_output.txt  tornado_tests_analysis_output.txt  uvicorn_tests_analysis_output.txt
__internal__/_prev_func_level/collected_evaluate_explanation/: collected_tests_explanation__aiohttp.json  collected_tests_explanation__connexion.json  collected_tests_explanation__fastapi.json  collected_tests_explanation__flask.json
__internal__/_prev_func_level/collected_tests_explanation/: collected_tests_explanation__aiohttp.json  collected_tests_explanation__connexion.json  collected_tests_explanation__fastapi.json  collected_tests_explanation__gunicorn.json  collected_tests_explanation__uvicorn.json  modify_name.py  split_methods.py
__internal__/_prev_func_level/evaluation_pairs/: evaluation_pairs_fastapi.json  evaluation_pairs_gunicorn.json
__internal__/_proposal/: progress_report.md
__internal__/collected_evaluate_explanation/: collected_tests_explanation__connexion.json  collected_tests_explanation__flask.json  collected_tests_explanation__gunicorn.json  collected_tests_explanation__sanic.json  collected_tests_explanation__uvicorn.json
__internal__/collected_methods/: connexion.json  flask.json
__internal__/collected_tests/: collected_tests__aiohttp.json  collected_tests__gunicorn.json
__internal__/collected_tests_explanation/: add_name.py  collected_tests_explanation__flask.json  delete_data.py
__internal__/evaluation_pairs/: evaluation_pairs_aiohttp.json  evaluation_pairs_fastapi.json  evaluation_pairs_gunicorn.json  evaluation_pairs_uvicorn.json
__internal__/pairs_output/: retrieve_pairs_uvicorn_method_explanation_similarity_score_threshold.json
__internal__/pairs_output_k=5/: retrieve_pairs_fastapi_method_explanation_similarity_score_threshold.json  retrieve_pairs_gunicorn_method_explanation_similarity_score_threshold.json  retrieve_pairs_uvicorn_method_explanation_similarity_score_threshold.json
__internal__/planning/: Candidate-Pairs.md  General-Planning.md  RAG.md
__internal__/relevant_pairs/: flask_code_retrieved_pairs.json  quart_code_retrieved_pairs.json  sanic_code_retrieved_pairs.json
__internal__/repo_file_paths/: flask_code_file_paths.json  quart_code_file_paths.json  sanic_code_file_paths.json
__internal__/result_report/: connexion_report.txt  fastapi_report.txt  flask_report.txt  gunicorn_report.txt  sanic_report.txt  uvicorn_report.txt
__internal__/results/: flask_transplanted_tests_results.json  quart_transplanted_tests_results.json  sanic_transplanted_tests_results.json
__internal__/retrieval_analysis/: flask_code_similarity_search_with_relevance_scores_analysis.json  quart_code_similarity_search_with_relevance_scores_analysis.json  sanic_code_similarity_search_with_relevance_scores_analysis.json
__internal__/scripts/: FetchRepos.py
__internal__/tc_sets/: django_tcm.json  flask_tcm.json  flask_tcm_with_summaries.json  quart_tcm.json  quart_tcm_with_summaries.json  sanic_tcm.json  sanic_tcm_with_summaries.json
__internal__/tc_sets_summary/: flask_tcm_with_summaries.json  quart_tcm_with_summaries.json  sanic_tcm_with_summaries.json
src/: data_collection.ipynb
src/gluon/: RepoParser.py  TestDiscoveryCofig.py  __about__.py  code_generator.py  code_interpreter.py  config.py  data_extractor.py  example_main.py  faiss_retriever.py  prompt_generator.py  rag.ipynb  rag_v2.ipynb  repo_parser.py  retriever.py  test_generator.py
tests/: example_test.py
(+16778 files in other folders)
