[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gluon"
dynamic = ["version"]
description = "Test Transplantation"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Ching-Ting Tsai", email = "tct20422@gmail.com" },
    { name = "(Daniel) Duy Phan", email = "danielphan.dptp@gmail.com" },
    { name = "(Larry) Yixin Li", email = "yiiyinxiix@gmail.com" },
]

# TODO: select the appropriate classifiers on https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "seutil",
    "pydantic",
    "requests",
    "pytest",
    "tqdm",
]

[project.optional-dependencies]
dev = ["hatch", "pytest>=6", "pytest-cov", "coverage[toml]", "black", "ruff"]
# TODO: (optional) add more optional dependencies in the same format of `dev`; if you want them installed in the dev environment, modify the pip install line in prepare-env.sh into `pip install -e .[dev,optional1,optional2]`

[project.urls]
# TODO: setup and add documentation link, e.g., readthedocs (but usually after developing some code)  # Documentation = ""
Issues = "https://github.com/danielphan-dp/test-transplantation/issues"
Source = "https://github.com/danielphan-dp/test-transplantation"

[tool.hatch.version]
path = "src/gluon/__about__.py"

# testing (pytest) and coverage (coverage, pytest-cov)
[tool.coverage.run]
source_pkgs = ["gluon", "tests"]
branch = true
parallel = true
omit = ["src/gluon/__about__.py"]

[tool.coverage.paths]
gluon = ["src/gluon", "*/gluon/src/gluon"]
tests = ["tests", "*/gluon/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.pytest.ini_options]
addopts = "--ignore=deprecated --cov --cov-report xml:cov.xml"
testpaths = ["tests"]

# formatting (black)
[tool.black]
target-version = ["py38"]
line-length = 120

# linting (ruff)
[tool.ruff]
target-version = "py38"
line-length = 120
select = [
    "E", # pycodestyle error
    "F", # pyflakes
    "I", # isort
]

[tool.ruff.isort]
known-first-party = ["gluon"]
